<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/searchbackground" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/applogo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/curveborder"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/zoupons_login_choice"
            android:textColor="@color/black" 
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1."
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical" />

            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_choice_border"
                android:layout_marginLeft="10dp"
                >
            
            <Button
                android:id="@+id/customer_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoupons_shopper_login_choice"
                android:background="@drawable/customtable_new"
                android:textColor="@color/black"
                android:textStyle="bold" 
                android:paddingRight="60dp"
                android:clickable="true"
                android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>

          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2."
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical" />

            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_choice_border"
                android:layout_marginLeft="10dp">
            
            <Button
                android:id="@+id/business_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoupons_business_login_choice"
                android:background="@drawable/customtable_new"
                android:textColor="@color/black"
                android:textStyle="bold" 
                android:paddingRight="55dp"
                android:clickable="true"
                android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>

      </LinearLayout>

</RelativeLayout>