<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/searchbackground"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/defaultloginpage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dip" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:src="@drawable/applogo" />

                    <TextView
                        android:id="@+id/login_usermessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Dream Big, Shop Small"
                        android:textColor="@color/black"
                        android:textSize="13dp" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_new"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/customtable_login"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="40dip"
                            android:background="@drawable/header_2"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingLeft="15dip"
                            android:paddingRight="10dip" >

                            <TextView
                                android:id="@+id/zoupons_login_longinheader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/LoginHeader"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="10dip"
                            android:paddingRight="10dip" >

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:orientation="vertical"
                                android:padding="5dip" >

                                <TextView
                                    android:id="@+id/zoupons_login_usernameheader"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/zoupons_login_username"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />

                                <EditText
                                    android:id="@+id/zoupons_login_username"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textEmailAddress"
                                    android:singleLine="true"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:orientation="vertical"
                                android:padding="5dip" >

                                <TextView
                                    android:id="@+id/zoupons_login_passwordheader"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/zoupons_login_password"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />

                                <EditText
                                    android:id="@+id/zoupons_login_password"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"
                                    android:singleLine="true"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/zoupons_login_rememberme"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:text="@string/zoupons_login_rememberme"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:orientation="vertical"
                                android:paddingLeft="5dip" >

                                <TextView
                                    android:id="@+id/zoupons_login_forgotpasswordheader"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:autoLink="all"
                                    android:linksClickable="false"
                                    android:selectAllOnFocus="false"
                                    android:text="@string/zoupons_login_forgotpassword"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="5dip" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/header_2"
                            android:gravity="center_vertical|right"
                            android:orientation="vertical"
                            android:padding="5dip" >

                            <Button
                                android:id="@+id/zoupons_login_button"
                                android:layout_width="100dip"
                                android:layout_height="45dip"
                                android:drawableLeft="@drawable/key"
                                android:text="Login"
                                android:textColor="@color/black"
                                android:gravity="center" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/zoupons_login_bottomcontainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/zoupons_login_statictext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zoupons_login_creataccounttext"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" " />

                    <TextView
                        android:id="@+id/zoupons_login_linktext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zoupons_login_creataccountlinktext"
                        android:textColor="@color/menubarbackground"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/zoupons_login_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zoupons_login_or"
                        android:textColor="@color/black"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/zoupons_login_layout_socialnetwork"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="invisible" >

                    <TextView
                        android:id="@+id/zoupons_login_socialnetwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zoupons_login_socialnetwork"
                        android:textColor="@color/black"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="15dip" />

                <LinearLayout
                    android:id="@+id/zoupons_login_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <ImageView
                        android:id="@+id/zoupons_login_zplogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/zpsignup"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="25dip"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/zoupons_login_facebooklogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:paddingRight="5dip"
                        android:src="@drawable/facebook" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- View Change password -->

    <LinearLayout
        android:id="@+id/changepassword"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="visible" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/applogo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/changepassword_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/LoginPageHeader_ForgotPassword"
                android:textColor="@color/black"
                android:textSize="13dip"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/changepassword_newpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New Password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" (minimum 6 characters)"
                    android:textColor="@color/blue"
                    android:textSize="11dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="5dip" />

            <EditText
                android:id="@+id/changepassword_newpassword_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="New Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/changepassword_confirm_newpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Confirm New Password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="5dip" />

            <EditText
                android:id="@+id/changepassword_confirm_newpassword_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/changepassword_save"
                android:layout_width="100dip"
                android:layout_height="45dip"
                android:background="@drawable/buttonhover"
                android:gravity="center"
                android:text="Save"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>